--- a/Monitor/packages.config
+++ b/Monitor/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Nancy" version="1.4.3" targetFramework="net461" />
-  <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net461" />
+  <package id="Autofac" version="4.4.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net461" />
+  <package id="Nancy" version="1.4.3" targetFramework="net40" />
+  <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net40" />
 </packages>
