--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -99,7 +99,11 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IndexModule.cs" />
+    <Compile Include="AutofacConfiguration\Bootstrapper.cs" />
+    <Compile Include="Modules\Index\IndexModule.cs" />
+    <Compile Include="Modules\Index\IRepeater.cs" />
+    <Compile Include="Modules\Index\Repeater.cs" />
+    <Compile Include="Modules\ResourcesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
