--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -100,10 +100,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutofacConfiguration\Bootstrapper.cs" />
+    <Compile Include="CommandBus\SimpleBus.cs" />
+    <Compile Include="CommandBus\CommandHandlerAttribute.cs" />
+    <Compile Include="CommandBus\ICommand.cs" />
+    <Compile Include="CommandBus\ICommandBus.cs" />
+    <Compile Include="CommandBus\IHandleCommand.cs" />
+    <Compile Include="Modules\Index\IndexCommand.cs" />
+    <Compile Include="Modules\Index\IndexHandler.cs" />
     <Compile Include="Modules\Index\IndexModule.cs" />
     <Compile Include="Modules\Index\IRepeater.cs" />
     <Compile Include="Modules\Index\Repeater.cs" />
-    <Compile Include="Modules\ResourcesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
