--- a/Monitor/packages.config
+++ b/Monitor/packages.config
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.4.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net461" />
-  <package id="Nancy" version="1.4.3" targetFramework="net40" />
-  <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
-  <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net40" />
+  <package id="AsyncUsageAnalyzers" version="1.0.0-alpha003" targetFramework="net452" developmentDependency="true" />
+  <package id="Autofac" version="4.5.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Nancy" version="1.4.3" targetFramework="net452" />
+  <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net452" />
+  <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net452" />
+  <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net452" />
+  <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net452" />
+  <package id="Simple.Data.RawSql" version="0.1.4446.14702" targetFramework="net452" />
+  <package id="Simple.Data.Sqlite" version="0.18.3.2" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.91.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.91.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.91.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.91.0" targetFramework="net452" />
 </packages>
