Add Resources controller

--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -87,13 +87,20 @@
     <Compile Include="CommandBus\ICommand.cs" />
     <Compile Include="CommandBus\ICommandBus.cs" />
     <Compile Include="CommandBus\IHandleCommand.cs" />
-    <Compile Include="CommandBus\IQuery.cs" />
     <Compile Include="CommandBus\SimpleBus.cs" />
     <Compile Include="Modules\Index\IndexCommand.cs" />
     <Compile Include="Modules\Index\IndexHandler.cs" />
     <Compile Include="Modules\Index\IndexModule.cs" />
     <Compile Include="Modules\Index\IRepeater.cs" />
     <Compile Include="Modules\Index\Repeater.cs" />
+    <Compile Include="Modules\Resources\Create\CreateResource.cs" />
+    <Compile Include="Modules\Resources\DeleteResource.cs" />
+    <Compile Include="Modules\Resources\Get\Resource.cs" />
+    <Compile Include="Modules\Resources\Get\ResourcesQueryParameters.cs" />
+    <Compile Include="Modules\Resources\IResourcesQuery.cs" />
+    <Compile Include="Modules\Resources\ResourcesModule.cs" />
+    <Compile Include="Modules\Resources\Get\ResourcesResponse.cs" />
+    <Compile Include="Modules\Resources\Create\Sensor.cs" />
     <Compile Include="NancyApiHost.cs" />
     <Compile Include="PageDetails.cs" />
     <Compile Include="Persistence\DbAdapter.cs" />
