--- a/Monitor.UnitTests/packages.config
+++ b/Monitor.UnitTests/packages.config
@@ -2,14 +2,9 @@
 <packages>
   <package id="Castle.Core" version="4.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="Moq" version="4.7.9" targetFramework="net452" />
+  <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
   <package id="NUnit" version="3.6.1" targetFramework="net452" />
-  <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net452" />
-  <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net452" />
-  <package id="Simple.Data.RawSql" version="0.1.4446.14702" targetFramework="net452" />
-  <package id="Simple.Data.Sqlite" version="0.18.3.2" targetFramework="net452" />
-  <package id="System.Data.SQLite" version="1.0.91.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.Core" version="1.0.91.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.EF6" version="1.0.91.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.Linq" version="1.0.91.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.0" targetFramework="net452" />
 </packages>
