--- a/Monitor/packages.config
+++ b/Monitor/packages.config
@@ -2,16 +2,13 @@
 <packages>
   <package id="AsyncUsageAnalyzers" version="1.0.0-alpha003" targetFramework="net452" developmentDependency="true" />
   <package id="Autofac" version="4.5.0" targetFramework="net452" />
+  <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net452" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="Nancy" version="1.4.3" targetFramework="net452" />
   <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net452" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net452" />
-  <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net452" />
-  <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net452" />
-  <package id="Simple.Data.RawSql" version="0.1.4446.14702" targetFramework="net452" />
-  <package id="Simple.Data.Sqlite" version="0.18.3.2" targetFramework="net452" />
-  <package id="System.Data.SQLite" version="1.0.91.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.Core" version="1.0.91.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.EF6" version="1.0.91.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.Linq" version="1.0.91.0" targetFramework="net452" />
+  <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.0" targetFramework="net452" />
 </packages>
