Reorganise measurements dir

--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -91,27 +91,27 @@
     <Compile Include="Modules\Index\Repeater.cs" />
     <Compile Include="Modules\Measurements\DeleteValues.cs" />
     <Compile Include="Modules\Measurements\DeleteValuesHandler.cs" />
-    <Compile Include="Modules\Measurements\IMeasurementsQuery.cs" />
+    <Compile Include="Modules\Measurements\Query\IMeasurementsQuery.cs" />
     <Compile Include="Modules\Measurements\MeasurementsModule.cs" />
-    <Compile Include="Modules\Measurements\MeasurementsQuery.cs" />
-    <Compile Include="Modules\Measurements\MeasurementsQueryParameters.cs" />
-    <Compile Include="Modules\Measurements\MeasurementsResponse.cs" />
-    <Compile Include="Modules\Measurements\Sensor.cs" />
-    <Compile Include="Modules\Measurements\SensorValue.cs" />
+    <Compile Include="Modules\Measurements\Query\MeasurementsQuery.cs" />
+    <Compile Include="Modules\Measurements\Query\MeasurementsQueryParameters.cs" />
+    <Compile Include="Modules\Measurements\Query\MeasurementsResponse.cs" />
+    <Compile Include="Modules\Measurements\Query\Sensor.cs" />
+    <Compile Include="Modules\Measurements\Query\SensorValue.cs" />
     <Compile Include="Modules\Measurements\ValuesQueryParameters.cs" />
-    <Compile Include="Modules\Measurements\ValuesResponse.cs" />
+    <Compile Include="Modules\Measurements\Query\ValuesResponse.cs" />
     <Compile Include="Modules\Resources\CreateResource.cs" />
     <Compile Include="IPathBuilder.cs" />
     <Compile Include="Modules\Resources\CreateResourceHandler.cs" />
     <Compile Include="Modules\Resources\DeleteResource.cs" />
     <Compile Include="Modules\Resources\DeleteResourceHandler.cs" />
-    <Compile Include="Modules\Resources\Get\Resource.cs" />
-    <Compile Include="Modules\Resources\Get\ResourcesQueryParameters.cs" />
-    <Compile Include="Modules\Resources\Get\IResourcesQuery.cs" />
+    <Compile Include="Modules\Resources\Query\Resource.cs" />
+    <Compile Include="Modules\Resources\Query\ResourcesQueryParameters.cs" />
+    <Compile Include="Modules\Resources\Query\IResourcesQuery.cs" />
     <Compile Include="Modules\Resources\ResourcesModule.cs" />
-    <Compile Include="Modules\Resources\Get\ResourcesResponse.cs" />
+    <Compile Include="Modules\Resources\Query\ResourcesResponse.cs" />
     <Compile Include="Modules\Resources\Sensor.cs" />
-    <Compile Include="Modules\Resources\Get\ResourcesQuery.cs" />
+    <Compile Include="Modules\Resources\Query\ResourcesQuery.cs" />
     <Compile Include="NancyApiHost.cs" />
     <Compile Include="PageDetails.cs" />
     <Compile Include="PathBuilder.cs" />
