Add Sensor communication data types

--- a/Monitor/packages.config
+++ b/Monitor/packages.config
@@ -9,6 +9,7 @@
   <package id="Nancy" version="1.4.3" targetFramework="net452" />
   <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net452" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.105.0" targetFramework="net452" />
 </packages>
