--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -59,6 +59,9 @@
     <Reference Include="Nancy.Hosting.Self, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Nancy.Hosting.Self.1.4.1\lib\net40\Nancy.Hosting.Self.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate, Version=4.1.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\NHibernate.4.1.1.4000\lib\net40\NHibernate.dll</HintPath>
     </Reference>
@@ -84,32 +87,31 @@
     <Compile Include="CommandBus\IHandleCommand.cs" />
     <Compile Include="CommandBus\SimpleBus.cs" />
     <Compile Include="Mapping\AutomapperProvider.cs" />
-    <Compile Include="Modules\Index\IndexCommand.cs" />
-    <Compile Include="Modules\Index\IndexHandler.cs" />
-    <Compile Include="Modules\Index\IndexModule.cs" />
-    <Compile Include="Modules\Index\IRepeater.cs" />
-    <Compile Include="Modules\Index\Repeater.cs" />
-    <Compile Include="Modules\Measurements\DeleteValues.cs" />
-    <Compile Include="Modules\Measurements\DeleteValuesHandler.cs" />
-    <Compile Include="Modules\Measurements\Query\IMeasurementsQuery.cs" />
-    <Compile Include="Modules\Measurements\MeasurementsModule.cs" />
-    <Compile Include="Modules\Measurements\Query\MeasurementsQuery.cs" />
-    <Compile Include="Modules\Measurements\Query\MeasurementsQueryParameters.cs" />
-    <Compile Include="Modules\Measurements\Query\MeasurementsResponse.cs" />
-    <Compile Include="Modules\Measurements\Query\Sensor.cs" />
-    <Compile Include="Modules\Measurements\Query\SensorValue.cs" />
-    <Compile Include="Modules\Measurements\ValuesQueryParameters.cs" />
-    <Compile Include="Modules\Measurements\Query\ValuesResponse.cs" />
+    <Compile Include="Api\Index\IndexCommand.cs" />
+    <Compile Include="Api\Index\IndexHandler.cs" />
+    <Compile Include="Api\Index\IndexModule.cs" />
+    <Compile Include="Api\Index\IRepeater.cs" />
+    <Compile Include="Api\Index\Repeater.cs" />
+    <Compile Include="Api\Measurements\DeleteValues.cs" />
+    <Compile Include="Api\Measurements\DeleteValuesHandler.cs" />
+    <Compile Include="Api\Measurements\Query\IMeasurementsQuery.cs" />
+    <Compile Include="Api\Measurements\MeasurementsModule.cs" />
+    <Compile Include="Api\Measurements\Query\MeasurementsQuery.cs" />
+    <Compile Include="Api\Measurements\Query\MeasurementsQueryParameters.cs" />
+    <Compile Include="Api\Measurements\Query\MeasurementsResponse.cs" />
+    <Compile Include="Api\Measurements\Query\Sensor.cs" />
+    <Compile Include="Api\Measurements\Query\SensorValue.cs" />
+    <Compile Include="Api\Measurements\ValuesQueryParameters.cs" />
+    <Compile Include="Api\Measurements\Query\ValuesResponse.cs" />
     <Compile Include="IPathBuilder.cs" />
-    <Compile Include="Modules\Resources\DeleteResource.cs" />
-    <Compile Include="Modules\Resources\DeleteResourceHandler.cs" />
-    <Compile Include="Modules\Resources\Query\Resource.cs" />
-    <Compile Include="Modules\Resources\Query\ResourcesQueryParameters.cs" />
-    <Compile Include="Modules\Resources\Query\IResourcesQuery.cs" />
-    <Compile Include="Modules\Resources\ResourcesModule.cs" />
-    <Compile Include="Modules\Resources\Query\ResourcesResponse.cs" />
-    <Compile Include="Modules\Resources\Sensor.cs" />
-    <Compile Include="Modules\Resources\Query\ResourcesQuery.cs" />
+    <Compile Include="Api\Resources\DeleteResource.cs" />
+    <Compile Include="Api\Resources\DeleteResourceHandler.cs" />
+    <Compile Include="Api\Resources\Query\Resource.cs" />
+    <Compile Include="Api\Resources\Query\ResourcesQueryParameters.cs" />
+    <Compile Include="Api\Resources\Query\IResourcesQuery.cs" />
+    <Compile Include="Api\Resources\ResourcesModule.cs" />
+    <Compile Include="Api\Resources\Query\ResourcesResponse.cs" />
+    <Compile Include="Api\Resources\Query\ResourcesQuery.cs" />
     <Compile Include="NancyApiHost.cs" />
     <Compile Include="PageDetails.cs" />
     <Compile Include="PathBuilder.cs" />
@@ -119,6 +121,14 @@
     <Compile Include="Database\Sensor.cs" />
     <Compile Include="Database\SessionFactoryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SensorCommunication\Dto\DataType.cs" />
+    <Compile Include="SensorCommunication\Dto\Measurement.cs" />
+    <Compile Include="SensorCommunication\Dto\MeasurementValue.cs" />
+    <Compile Include="SensorCommunication\Dto\Metadata.cs" />
+    <Compile Include="SensorCommunication\Dto\SensorDefinition.cs" />
+    <Compile Include="SensorCommunication\IJsonDeserializer.cs" />
+    <Compile Include="SensorCommunication\JsonDeserializer.cs" />
+    <Compile Include="SensorCommunication\MetadataHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
