--- a/Monitor/packages.config
+++ b/Monitor/packages.config
@@ -7,6 +7,7 @@
   <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="Nancy" version="1.4.3" targetFramework="net452" />
+  <package id="Nancy.Authentication.Basic" version="1.4.1" targetFramework="net452" />
   <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net452" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
